# rustycraft

./: .Cargo.lock.swp  .gitignore  .last_world  Cargo.toml  README.md  mesh_vertices_terrain.txt  output.txt
assets/shaders/: crosshairs.frag  crosshairs.vert  fragment.frag  geometry.geom  text_fragment.frag  text_vertex.vert  vertex.vert
assets/shaders/cloud/: cloud_fragment.frag  cloud_vertex.vert
assets/shaders/cube_outline/: cube_outline.frag
assets/shaders/depth_map/: depth_fragment.frag  depth_vertex.vert
assets/shaders/framebuffer/: fb_fragment.frag  fb_vertex.vert
assets/shaders/voxal/: vertex.vert  (+2 more)
game_data/: last_server  last_world
src/: .main.rs.swp  main.rs  vertex.rs
src/core/: block_map.rs  block_type.rs  chunk.rs  coord_map.rs  player.rs  world.rs
src/models/: .mod.rs.swp  block.rs  block_face.rs  block_face_type.rs  block_map.rs  block_type.rs  camera.rs  character.rs  chunk.rs  cube_outline.rs  mod.rs  new_chunk.rs  shader.rs  text_renderer.rs  texture.rs  vertex_array.rs  world.rs
src/multiplayer/: direction.rs  mod.rs  rc_message.rs  server_chunk.rs  server_connection.rs  server_player.rs  server_state.rs  server_world.rs
src/opengl/: button.rs  camera.rs  cloud.rs  cube.rs  depth_framebuffer.rs  face_uvs.rs  framebuffer.rs  mod.rs  player_model.rs  skybox.rs  tex_quad.rs  text_renderer.rs
src/traits/: game_chunk.rs  game_world.rs  mod.rs
src/utils/: character_map.rs  chunk_utils.rs  cube.rs  mod.rs  num_utils.rs  texture.rs
worlds/andrewworld/: seed
worlds/my-world/: seed
worlds/my-world2/: seed
worlds/wyattworld/: seed
(+2965 files in other folders)
